# jaxKAN

./: pyproject.toml
jaxkan/: KAN.py
